[project]
name = "anbernic-roms"
version = "0.1.0"
description = ""
authors = [
    {name = "silentbugs",email = "d.misdanitis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
flake8 = "^7.3.0"

